judger/judger_cpp/tmp/59b33596-d741-4fc4-8e38-49e11150b392txt
c:\Users\haohan\Desktop\myoj\judger\judger_cpp\tmp\cc162671-aa25-4555-be10-00c958182fbf.cpp:1:1: error: 'ff' does not name a type
 ff
 ^
